# bazel-oci-image-issue

./: MODULE.bazel  README.md
my_image/: BUILD.bazel
ubuntu_noble/: BUILD.bazel  noble.lock.json  noble.yaml
